--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ env:
 jobs:
 
 
-  lin-docker:
+  docker-vunit:
     runs-on: ubuntu-latest
     env:
       DOCKER_BUILDKIT: 1
@@ -20,7 +20,7 @@ jobs:
 
     - uses: actions/checkout@v2
 
-    - run: docker run --rm -v $(pwd):/src -w /src ghdl/vunit:llvm-master ./test.sh
+    - run: docker run --rm -v $(pwd):/src -w /src ghdl/vunit:llvm-master python3 run.py -v
 
     - uses: actions/upload-artifact@v2
       with:
@@ -28,7 +28,7 @@ jobs:
         path: ./*.ghw
 
 
-  win-setup:
+  win-bash:
     runs-on: windows-latest
     defaults:
       run:
